<resources>
    <string name="app_name">PowerWork</string>
    <string name="slogan">标语</string>
    <string name="versions">1.0</string>

    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="exit">退出</string>
    <string name="save">保存</string>
    <string name="no_save">不保存</string>
    <string name="check">查看</string>
    <string name="edit">修改</string>

    <string name="navigation_drawer_open">oprn</string>
    <string name="navigation_drawer_close">close</string>
    <string name="action_settings">Settings</string>
    <string name="internet_err">网络不给力，换个姿势试试吧</string>

    <string name="feedback">意见反馈</string>
    <string name="fee_et_content">反馈内容</string>
    <string name="fee_bt_submit">提交反馈</string>
    <string name="fee_content_null">反馈信息不能为空的哦！</string>
    <string name="fee_submit_success">我们已经收到了您的反馈，我们将火速赶去处理</string>

    <string name="aboutus">关于我们</string>
    <string name="abo_bt_good">给个好评吧</string>

    <string name="setting">设置</string>
    <string name="set_tv_account">账号设置</string>
    <string name="set_tv_info">通知设置</string>
    <string name="set_tv_feedback">意见反馈</string>
    <string name="set_tv_aboutus">关于我们</string>

    <string name="notification">通知设置</string>
    <string name="not_tv_type">通知类型</string>
    <string name="not_tv_type1">分配给我</string>
    <string name="not_tv_type2">提醒关注</string>
    <string name="not_tv_type3">我的安排</string>
    <string name="not_tv_info">通知方式</string>
    <string name="not_tv_info1">消息推送</string>

    <string name="account">账号设置</string>
    <string name="acc_tv_name">姓名</string>
    <string name="acc_tv_phone">电话</string>
    <string name="acc_tv_birthday">生日</string>
    <string name="acc_bt_save">保存</string>
    <string name="acc_bt_exit">退出当前账号</string>
    <string name="acc_dialog_title">换个头像，换个心情</string>
    <string name="acc_dialog_title3">换个项目图标，增加点生机？</string>
    <string name="acc_dialog_title2">修改的信息还没有保存哦！</string>
    <string name="acc_dialog_ok">去相册</string>


    <string name="login">登陆</string>
    <string name="log_et_username">用户名</string>
    <string name="log_et_password">密码</string>
    <string name="log_et_phone">手机号码</string>
    <string name="log_bt_forget">忘记密码</string>
    <string name="log_bt_register">注册</string>
    <string name="log_null_username">用户名不能为空哦！</string>
    <string name="log_null_password">密码不能为空哦！</string>
    <string name="log_null_phone">电话号码不能为空哦！</string>


    <string-array name="cal_month">
        <item>一月</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>十一月</item>
        <item>十二月</item>
    </string-array>

    <string-array name="dynamic_type">
        <item>创建了项目</item>
        <item>创建了任务</item>
        <item>上传了文件</item>
    </string-array>


    <string name="achievement">我的成就</string>
    <string name="ach_tv_type1">偶像派</string>
    <string name="ach_tv_type2">实力派</string>
    <string name="ach_tv_order1">你已经超过了</string>
    <string name="ach_tv_order2">的小伙伴</string>
    <string name="ach_tv_task">任务</string>
    <string name="ach_tv_read">已阅</string>
    <string name="ach_bt_show">别拦我，让我去炫耀！</string>


    <string name="notes">我的记录</string>

    <string name="task">任务</string>
    <string name="my_task">任务</string>

    <string name="pop_add_voice_action">点击纪录</string>
    <string name="pop_add_tv_cancel">算了吧</string>
    <string name="pop_add_tv_ok">添加</string>

    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>


    <string name="project">项目</string>
    <string name="pro_tv_btn_item1">首页</string>
    <string name="pro_tv_btn_item2">任务</string>
    <string name="pro_tv_btn_item3">文件</string>
    <string name="pro_tv_btn_item4">统计</string>
    <string name="pro_tv_btn_item5">团队</string>



    <string name="pro_item3_tv_nowfile">新文件</string>
    <string name="pro_item3_tv_nowfiles">新文件夹</string>

    <string name="addfolder">添加文件夹</string>
    <string name="foldername">文件夹名</string>
    <string name="namenull">名字不能为空</string>
    <string name="log_dia_register_ing">注册ing。。。</string>
    <string name="log_dia_register_suc">注册成功</string>
    <string name="log_dia_register_fai">注册失败</string>
    <string name="log_dia_login_ing">登陆ing。。。</string>
    <string name="log_dia_login_suc">登陆成功</string>
    <string name="acc_dialog_uppic">正在上传。。。。</string>
    <string name="acc_dialog_savedata">正在保存信息。。。</string>
    <string name="feedback_ing">正在提交信息。。。。</string>
    <string name="feedback_done">我们已经收到了您的反馈，我们会尽快解决，感谢您的支持</string>
    <string name="addproject">创建项目</string>
    <string name="addproject_ing">正在创建项目。。。</string>
    <string name="addproject_ed">成功创建项目</string>
    <string name="loding">加载中。。。</string>
    <string name="lode_fail">加载失败</string>
    <string name="team">团队</string>
    <string name="add">添加</string>
    <string name="pro_item2_group_mytask">我的任务</string>
    <string name="pro_item2_group_othertask">其他任务</string>
    <string name="pub_taskname">任务名：</string>
    <string name="publish">发布</string>
    <string name="note">笔记</string>
    <string name="pub_performer">执行者：</string>
    <string name="pub_endtime">截止日期：</string>
    <string name="pub_notename">笔记名：</string>
    <string name="pub_addalarm">添加提醒：</string>
    <string name="pub_alarmtime">提醒时间：</string>
    <string name="publish_ing">正在发布。。。</string>
    <string name="publish_succ">发布成功</string>
    <string name="pub_project_name">项目：</string>
    <string name="pub_participation">参与者：</string>
    <string name="clear">清除</string>
    <string name="choseall">全选</string>
    <string name="no_man">0人</string>
    <string name="addfolder_ing">正在创建文件。。。</string>
    <string name="addfolder_succ" >创建文件成功</string>
    <string name="pro_item3_tv_item1">图片</string>
    <string name="pro_item3_tv_item2">录音</string>
    <string name="pro_item3_tv_item3">文件</string>
    <string name="connect_fail">网络连接失败</string>
    <string name="projectname">项目名</string>
    <string name="noProject">您还没有已加入的项目</string>
    <string name="pro_add_tv_item1">创建项目</string>
    <string name="pro_add_tv_item2">添加项目</string>
    <string name="search">查找</string>
    <string name="searchnull">查找信息不能为空</string>
    <string name="search_ing">正在查找</string>
    <string name="acc_bt_message">发送消息</string>
    <string name="sendMessage">发送消息</string>
    <string name="sendFeedback">提交反馈</string>
    <string name="send">发送</string>
    <string name="message_null">消息不能为空</string>
    <string name="sendMessage_done">发送成功</string>
    <string name="acc_bt_join">邀请</string>

</resources>
