<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scene"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.bignerdranch.android.transitionexample.TransitionFragment">


    <EditText
        android:id="@+id/log_et_username"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_above="@+id/log_et_password"
        android:layout_centerHorizontal="true"
        android:hint="@string/log_et_username"
        android:inputType="text"
        android:maxLength="20"
        android:minLines="8" />

    <EditText
        android:id="@+id/log_et_password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:hint="@string/log_et_password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:minLines="8" />

    <Button
        android:id="@+id/log_bt_submit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/log_et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="checkLogin"
        android:text="@string/login" />

    <Button
        android:id="@+id/log_bt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="goToScene2"
        android:text="@string/log_bt_register" />

    <Button
        android:id="@+id/log_bt_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/log_bt_forget" />
</RelativeLayout>