<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            style="@style/ach_tv_type"
            android:layout_marginEnd="30dp"
            android:text="@string/ach_tv_type1" />

        <TextView
            style="@style/ach_tv_type"
            android:layout_marginStart="30dp"
            android:text="@string/ach_tv_type2" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/ach_iv_progress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="80%"
            android:textColor="@color/default_text"
            android:textSize="50sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ach_tv_order1"
        android:textColor="@color/cal_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/ach_tv_number"
            android:layout_marginEnd="30dp"
            android:text="5" />

        <TextView
            style="@style/ach_tv_number"
            android:layout_marginStart="30dp"
            android:text="4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            style="@style/ach_tv_number_label"
            android:layout_marginEnd="30dp"
            android:text="@string/ach_tv_task" />

        <TextView
            style="@style/ach_tv_number_label"
            android:layout_marginStart="30dp"
            android:text="@string/ach_tv_read" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/ach_bt_show"/>
</LinearLayout>