<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="175dp">

                <ImageView
                    android:id="@+id/acc_iv_pic"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/acc_iv_changepic"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="60dp"
                    android:src="@drawable/camera_iv_select" />
            </RelativeLayout>

            <TextView
                style="@style/account_tv_item"
                android:text="@string/acc_tv_name" />

            <EditText
                android:id="@+id/acc_et_name"
                style="@style/account_et_item"
                android:inputType="textPersonName" />


            <TextView
                style="@style/account_tv_item"
                android:text="@string/acc_tv_phone" />

            <EditText
                android:id="@+id/acc_et_phone"
                style="@style/account_et_item"
                android:inputType="phone" />


            <TextView
                style="@style/account_tv_item"
                android:text="@string/acc_tv_birthday" />

            <TextView
                android:id="@+id/acc_tv_birthday"
                style="@style/account_et_item" />


            <Button
                android:id="@+id/acc_bt_exit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:background="@null"
                android:text="@string/acc_bt_exit" />
            <Button
                android:id="@+id/acc_bt_join"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:background="@null"
                android:visibility="gone"
                android:text="@string/acc_bt_join" />
            <Button
                android:id="@+id/acc_bt_message"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:background="@null"
                android:visibility="gone"
                android:text="@string/acc_bt_message" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>